.k8s/production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: turfbuilder-production
  namespace: turfbuilder
spec:
  replicas: 2
  selector:
    matchLabels:
      app: turfbuilder
      env: production
  template:
    metadata:
      labels:
        app: turfbuilder
        env: production
    spec:
      containers:
        - name: turfbuilder
          image: ghcr.io/joeldesante/turfbuilder:production
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: db-ca
              mountPath: /etc/ssl/db-ca
              readOnly: true
      volumes:
        - name: db-ca
          secret:
            secretName: turfbuilder-db-ca
---
apiVersion: v1
kind: Service
metadata:
  name: turfbuilder-production-svc
  namespace: turfbuilder
spec:
  selector:
    app: turfbuilder
    env: production
  ports:
    - port: 80
      targetPort: 3000
