.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: turfbuilder-ingress
  namespace: turfbuilder
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/whitelist-source-range: >-
      173.245.48.0/20,103.21.244.0/22,103.22.200.0/22,103.31.4.0/22,
      141.101.64.0/18,108.162.192.0/18,190.93.240.0/20,188.114.96.0/20,
      197.234.240.0/22,198.41.128.0/17,162.158.0.0/15,104.16.0.0/13,
      104.24.0.0/14,172.64.0.0/13,131.0.72.0/22
spec:
  ingressClassName: nginx
  rules:
    - host: turfbuilder.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: turfbuilder-production-svc
                port:
                  number: 80
    - host: www.turfbuilder.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: turfbuilder-production-svc
                port:
                  number: 80
    - host: staging.turfbuilder.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: turfbuilder-staging-svc
                port:
                  number: 80
    - host: analytics.turfbuilder.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: umami-svc
                port:
                  number: 80
