.k8s/production-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: production-route
  namespace: turfbuilder
  labels:
    app: turfbuilder
    env: production
spec:
  parentRefs:
    - name: gateway
      namespace: turfbuilder
      sectionName: http
  
  hostnames:
    - "turfbuilder.org"
    - "www.turfbuilder.org"
  
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: turfbuilder-production-svc
          port: 80
